# flump

./: .gitignore  README.md  pyinstaller_entry_point.py  pyproject.toml
.github/workflows/: bump-and-build.yaml  bump-version.yaml
src/flump/: __init__.py  build.py  copy_image.py  filter.py  flump.py
src/flump/filters/: adjust_hsv.py  adjust_rgb.py  chromakey.py  invert_luminance.py
